Fixes to responsive navigation on mobile

--- a/stylesheets/config/_variables.scss
+++ b/stylesheets/config/_variables.scss
@@ -48,6 +48,7 @@ $gutter-width:                        20px !default;
 $component-offset:                    180px !default;
 $tab-column-width:                    200px !default;
 $tab-column-width-tablet:             133px !default;
+$tab-column-width-mobile:             250px !default;
 $sidebar-column-width:                200px !default;
 $sidebar-column-width-tablet:         133px !default;
 
